// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalAlert Desktop ModalAlert renders (default) 1`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      name="trap-focus"
    >
      <div
        aria-label="Test ModalAlert"
        class="container"
        role="alertdialog"
      >
        <div
          class="backdrop zoomOut"
        />
        <div
          class="wrapper hideOutline"
          style="width: 540px;"
          tabindex="-1"
        >
          <div
            class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
            style="width: 100%;"
          >
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap4 columnGap4 flexGrow xsDirectionRow xsItemsCenter"
                >
                  <div
                    class="FlexItem flexGrow"
                  >
                    <h1
                      class="Heading fontSize400 default alignStart breakWord"
                    >
                      Delete Pin?
                    </h1>
                  </div>
                  <div
                    class="FlexItem"
                  >
                    <div
                      class="box marginStart2"
                    >
                      <button
                        aria-label="Dismiss modal"
                        class="parentButton"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          class="button tapTransition enabled"
                        >
                          <div
                            class="pog white"
                            style="height: 32px; width: 32px;"
                          >
                            <svg
                              aria-hidden="true"
                              aria-label=""
                              class="default icon iconBlock"
                              height="16"
                              role="img"
                              viewBox="0 0 24 24"
                              width="16"
                            >
                              <path
                                d="test-file-stub"
                              />
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              Modal content
            </div>
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap2 columnGap2 justifyEnd xsDirectionRow"
                >
                  <div
                    class="FlexItem"
                  >
                    <button
                      aria-label="Acknowledge expired card"
                      class="button block accessibilityOutline parentButton"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="button block accessibilityOutline tapTransition lg red enabled childrenDiv"
                      >
                        <div
                          class="inverse alignCenter Text fontSize300 fontWeightSemiBold"
                        >
                          Got it
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalAlert Desktop ModalAlert renders (error) 1`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      name="trap-focus"
    >
      <div
        aria-label="Test ModalAlert"
        class="container"
        role="alertdialog"
      >
        <div
          class="backdrop"
        />
        <div
          class="wrapper hideOutline"
          style="width: 540px;"
          tabindex="-1"
        >
          <div
            class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
            style="width: 100%;"
          >
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap4 columnGap4 flexGrow xsDirectionRow xsItemsCenter"
                >
                  <div
                    class="FlexItem"
                  >
                    <div
                      class="box"
                    >
                      <svg
                        aria-label="error"
                        class="error icon iconBlock"
                        height="20"
                        role="img"
                        viewBox="0 0 24 24"
                        width="20"
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="FlexItem flexGrow"
                  >
                    <h1
                      class="Heading fontSize400 default alignStart breakWord"
                    >
                      Delete Pin?
                    </h1>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              Modal content
            </div>
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap2 columnGap2 justifyEnd xsDirectionRow"
                >
                  <div
                    class="FlexItem"
                  >
                    <button
                      aria-label="Acknowledge expired card"
                      class="button block accessibilityOutline parentButton"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="button block accessibilityOutline tapTransition lg red enabled childrenDiv"
                      >
                        <div
                          class="inverse alignCenter Text fontSize300 fontWeightSemiBold"
                        >
                          Got it
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalAlert Desktop ModalAlert renders (warning) 1`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      name="trap-focus"
    >
      <div
        aria-label="Test ModalAlert"
        class="container"
        role="alertdialog"
      >
        <div
          class="backdrop"
        />
        <div
          class="wrapper hideOutline"
          style="width: 540px;"
          tabindex="-1"
        >
          <div
            class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
            style="width: 100%;"
          >
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap4 columnGap4 flexGrow xsDirectionRow xsItemsCenter"
                >
                  <div
                    class="FlexItem"
                  >
                    <div
                      class="box"
                    >
                      <svg
                        aria-label="warning"
                        class="warning icon iconBlock"
                        height="20"
                        role="img"
                        viewBox="0 0 24 24"
                        width="20"
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="FlexItem flexGrow"
                  >
                    <h1
                      class="Heading fontSize400 default alignStart breakWord"
                    >
                      Delete Pin?
                    </h1>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              Modal content
            </div>
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap2 columnGap2 justifyEnd xsDirectionRow"
                >
                  <div
                    class="FlexItem"
                  >
                    <button
                      aria-label="Acknowledge expired card"
                      class="button block accessibilityOutline parentButton"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="button block accessibilityOutline tapTransition lg red enabled childrenDiv"
                      >
                        <div
                          class="inverse alignCenter Text fontSize300 fontWeightSemiBold"
                        >
                          Got it
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalAlert Mobile Desktop ModalAlert renders 1`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      name="trap-focus"
    >
      <div
        aria-label="Test ModalAlert"
        class="container"
        role="alertdialog"
      >
        <div
          class="backdrop zoomOut"
        />
        <div
          class="wrapper hideOutline"
          style="width: 540px;"
          tabindex="-1"
        >
          <div
            class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
            style="width: 100%;"
          >
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap4 columnGap4 flexGrow xsDirectionRow xsItemsCenter"
                >
                  <div
                    class="FlexItem flexGrow"
                  >
                    <h1
                      class="Heading fontSize400 default alignStart breakWord"
                    >
                      Delete Pin?
                    </h1>
                  </div>
                  <div
                    class="FlexItem"
                  >
                    <div
                      class="box marginStart2"
                    >
                      <button
                        aria-label="Dismiss modal"
                        class="parentButton"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          class="button tapTransition enabled"
                        >
                          <div
                            class="pog white"
                            style="height: 32px; width: 32px;"
                          >
                            <svg
                              aria-hidden="true"
                              aria-label=""
                              class="default icon iconBlock"
                              height="16"
                              role="img"
                              viewBox="0 0 24 24"
                              width="16"
                            >
                              <path
                                d="test-file-stub"
                              />
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              Modal content
            </div>
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap2 columnGap2 justifyEnd xsDirectionRow"
                >
                  <div
                    class="FlexItem"
                  >
                    <button
                      aria-label="Acknowledge expired card"
                      class="button block accessibilityOutline parentButton"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="button block accessibilityOutline tapTransition lg red enabled childrenDiv"
                      >
                        <div
                          class="inverse alignCenter Text fontSize300 fontWeightSemiBold"
                        >
                          Got it
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
  </div>
</body>
`;
